@@ -1,3 +1,11 @@
+2018-07-21  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* Makefile.am (m68k_SRCS): Add m68k_cfi.c and m68k_initreg.c.
+	* m68k_cfi.c: New file.
+	* m68k_initreg.c: New file.
+	* m68k_init.c (m68k_init): Hook abi_cfi and
+	set_initial_registers_tid.
+
 2018-07-19  Andreas Schwab  <schwab@suse.de>
 
 	* riscv_regs.c (riscv_register_info): Fix typo.
